Added license statement

--- a/README
+++ b/README
@@ -20,3 +20,5 @@ https://github.com/lowvoltage/USBTinyISP-Single-Sided
 The "Sick of Beige" standard:
 http://dangerousprototypes.com/docs/Sick_of_Beige_standard_PCB_sizes_v1.0
 
+Released under the Creative Commons Attribution Share-Alike 3.0 license
+http://creativecommons.org/licenses/by-sa/3.0/
